# cable-robot

./: .gitignore
math/: ls-solve.py  optimization.nb
math/dynamics-solve/: CMakeLists.txt  main.cpp
src/cable_robot/: CMakeLists.txt  cmake_commands.sh  compile_commands.json  package.xml
src/cable_robot/config/: core.yaml  gcu.yaml
src/cable_robot/include/cable_robot/: EigenQP.h  cdpr.h  cdpr_plugin.h  core.h  gcu.h  general_control_unit.h  tda.h
src/cable_robot/launch/: cable_robot.launch.py  cable_robot_launch.py  cdpr.launch.py  core.launch.py  display.launch.py  gazebo.launch.py  gcu.launch.py  general_control_unit.launch.py
src/cable_robot/msg/: Tensions.msg
src/cable_robot/rviz/: urdf.rviz
src/cable_robot/sdf/: cable_robot.sdf
src/cable_robot/src/: EigenQP.cpp  cdpr.cpp  cdpr_plugin.cpp  core.cpp  gcu.cpp  general_control_unit.cpp  tda.cpp
src/cable_robot/urdf/: cable_robot.urdf
src/cable_robot_interfaces/: CMakeLists.txt  package.xml
