<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>cable_robot</name>
  <version>0.0.0</version>
  <description>Cable robot operating by four cables</description>
  <maintainer email="korr237i@yandex.ru">genzorr</maintainer>
  <license>Copyright</license>

  <buildtool_depend>ament_cmake</buildtool_depend>
  <depend>rclcpp</depend>
  <depend>std_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>sensor_msgs</depend>
  <depend>gazebo</depend>
  <depend>gazebo_ros</depend>
  <depend>gazebo_msgs</depend>
  <depend>VISP</depend>

  <exec_depend>ros2launch</exec_depend>

  <buildtool_depend>rosidl_default_generators</buildtool_depend>
  <exec_depend>rosidl_default_runtime</exec_depend>
  <member_of_group>rosidl_interface_packages</member_of_group>

  <!--  <exec_depend>joint_state_publisher</exec_depend>-->
<!--  <exec_depend>joint_state_publisher_gui</exec_depend>-->
<!--  <exec_depend>robot_state_publisher</exec_depend>-->
<!--  <exec_depend>rviz2</exec_depend>-->
<!--  <exec_depend>xacro</exec_depend>-->

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
    <gazebo_ros plugin_path="${prefix}"/>
  </export>
</package>
